# RepoKernel

./: .gitignore  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  CURRENT_STATE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  repokernel.json
docs/: agentic-feedback.md  autopoietic-cycle-gap-analysis.md  claim-boundaries.md  clarity-cleanup-cycle.md  codex-operating-guide.md  compatibility-matrix.md  concept.md  context-surface.md  contribution-lanes.md  departmental-autonomy-spectral-analysis.md  distribution-model.md  feedback.md  first-contact-preview.md  integration-surfaces.md  internal-runtime-architecture.md  meta-skill-integration-map.md  metaskill-propagation-contract.md  minimum-action-improvement-contract.md  overview.html  pi-reference.md  possibility-horizon.md  pre-public-checklist.md  public-announcement-drafts.md  public-capability-source-pass.md  quickstart.md  readiness-levels.md  recovery-procedure.md  recursive-distillation-plane.md  repokernel-promotion-rules.md  retrofit-model.md  runtime-adapters.md  seed-synthesis-pipeline.md  skill-repo-lifecycle.md  staged-output-review.md  update-and-adoption.md
process/: DECISION_LOG.md  FIRST_PACKET.md  PROMOTION_LOG.md  ROADMAP.md
registry/: skills.json
schemas/: activation-report.schema.json  generation-plan.schema.json  project-model.schema.json  seed-spec.schema.json  source-manifest.schema.json  target-snapshot.schema.json
scripts/: audit_repokernel_project.py  audit_skill_repo.py  phase0_inventory.py  repokernel_core.py  scaffold_repokernel_project.py  scaffold_skill_repo.py
(+153 files in other folders)
