[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repokernel"
version = "0.3.0.dev0"
description = "Host-neutral Project Kernel compiler core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Graziano Guiducci" }]

[tool.setuptools.packages.find]
where = ["src"]
